few alignment issue fixed in cost and performance

--- a/app/styles/reports.less
+++ b/app/styles/reports.less
@@ -609,6 +609,9 @@ div.reports_section_details_more div.each_reports_row:nth-last-child(2) {
       padding-left: 10px ;
       height:25px;
     }
+    div.direction_arrows {
+      margin-top: 10px ;
+    }
   }
 }
 
@@ -2507,6 +2510,11 @@ div.strategy_total_container {
       border: solid 1px @reportBorder ;
       padding: 10px 20px;
       border-bottom: 0px ;
+      .dropdown-menu.kpi_indicator_ul {
+        ul.drop_list {
+          width: 80% ;
+        } 
+      }
       .each_col {
         .ColHeadingFontColor();
         margin: 6px 0 2px 15px;
